    CVTerm class.  These are convenience functions that allow the user 
    to determine how many resources are stored for the particular term
    and to index into the values directly.

  - Tracker issue #2015847
    Each ListOfXXX class now has derived get functions that return an
    object of the expected class e.g.  ListOfEvents->get() returns
    an Event *.

  - Tracker issue #2136796
    There is now additional code to check the ordering of assignment rules
    in a L1 or L2V1 model.  

  - Tracker issue #2114473.
    The UnitDefinition class has a new function isVariantOfSubstancePerTime()
    which returns true if the unitDefinition is a variant of the built-in
    unit of substance per the built-in unit of time, i.e. when multiplied by
    a unit of 'second' the resulting unitDefinition is a variant of substance,
    meaning moles or items (and grams or kilograms from SBML level 2 version 2 
    onwards) with only abritrary variations in scale or multiplier values.
    The function returns false if the unitDefinition is not a variant
    of substance per time.   

  - Tracker issue #2086608.
    Added new functions to the ASTNode class.  These are 
    removeChild(n) which removes the nth child; 
    replaceChild(n, node) which replaces the nth child with node
    and insertChild(n, node) which inserts node into the list of
    children such that it becomes the nth child.  These functions all 
    return an integer indicating success (0) or failure (-1). Failure 
    is only reported if n exceeds the size of the node; invalid ASTNodes 
    resulting from the operation are not reported.

  - Classes relating to SBML components have two additional constructors:
    the first is of the form XXX(unsigned int level, unsigned int version, 
    XMLNamespaces* xmlns = 0).  This function constructs the object as
    in other constructors but additionally sets new SBase variables 
    mObjectLevel and mObjectVersion and the mNamespaces variable previously 