@@ -323,6 +323,12 @@
 				RelativePath="..\..\validator\L2v3CompatibilityValidator.cpp">
 			</File>
 			<File
+				RelativePath="..\..\validator\constraints\L2v4CompatibilityConstraints.cpp">
+			</File>
+			<File
+				RelativePath="..\..\validator\L2v4CompatibilityValidator.cpp">
+			</File>
+			<File
 				RelativePath="..\..\validator\constraints\LambdaMathCheck.cpp">
 			</File>
 			<File
